@@ -23,3 +23,5 @@ content = {{$dist->name}}-*
 [GitHub::Create]
 repo   = {{ lc $dist->name }}
 prompt = 1
+
+[Git::PushInitial]
